# langchain-academy

./: pyproject.toml
module-0/: basics.ipynb
module-1/: chain.ipynb  simple-graph.ipynb
module-1/studio/.langgraph_api/: .langgraph_ops.pckl
